- input uses fix